Updates from Overleaf

--- a/00_config/settings.tex
+++ b/00_config/settings.tex
@@ -7,7 +7,7 @@
 \ohead{\headmark}                  % Kapitelname rechts oben
 \ofoot{\pagemark}                  % Seitenzahl rechts unten
 
-% ===== DEUTSCHE BESCHRIFTUNGEN FÜR QUERVERWEISE =====
+%% ===== DEUTSCHE BESCHRIFTUNGEN FÜR QUERVERWEISE =====
 \crefname{figure}{Abbildung}{Abbildungen}
 \crefname{table}{Tabelle}{Tabellen}
 \crefname{equation}{Gleichung}{Gleichungen}
