Updates from Overleaf

--- a/08_bibliography/literatur.bib
+++ b/08_bibliography/literatur.bib
@@ -1,9 +1,9 @@
 % Bibliographie-Datei für Target Value Design Masterarbeit
 % Hier kommen später die Literaturquellen rein
 
-@article{beispiel2025,
-    title={Beispiel-Artikel},
-    author={Mustermann, Max},
-    year={2025},
-    journal={Beispiel Journal}
+@book{ballard2025,
+    author = {Ballard, Glenn},
+    title = {Target Value Delivery in Building Projects},
+    publisher = {Cambridge Scholar Publishing },
+    year = {2025}
 }
