--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,12 @@
 % === HAUPTTEIL (arabische Seitenzahlen) ===
 \mainmatter
 \input{02_mainmatter/ch1_Einleitung}
-\input{02_mainmatter/ch2}
+\input{02_mainmatter/ch2_Grundlagen}
+\input{02_mainmatter/ch3_Methodik}
+\input{02_mainmatter/ch4_Analyse}
+\input{02_mainmatter/ch5_Transfer}
+\input{02_mainmatter/ch6_Infrastruktur}
+\input{02_mainmatter/ch7_Fazit}
 
 % === LITERATURVERZEICHNIS ===
 \backmatter
