--- a/02_mainmatter/ch1_Einleitung.tex
+++ b/02_mainmatter/ch1_Einleitung.tex
@@ -3,9 +3,9 @@
 
 \section{Problemstellung und Relevanz}
 \label{sec:problemstellung}
-Die deutsche Bau-- und Infrastrukturbranche steht vor immensen Herausforderungen, die  eine grundlegende Steigerung der Effizienz und Umsetzungsgeschwindigkeit erfordern.  Ein signifikantes Wohnungsbaudefizit, das je nach Studie auf über 550.000 fehlende  Wohnungen beziffert wird, verlangt nach einer drastischen Beschleunigung des Neubaus (vgl. Pestel-Institut \& Bauforschungsinstitut ARGE 2025). Gleichzeitig stellt die  Bundesregierung über ein neues Sondervermögen für Infrastruktur und Klimaschutz bis  2029 mehr als 100 Milliarden Euro an Mitteln jeweils für den Bahn- und Wohnungsbau  bereit (vgl. B. Brinkmeier 2025). Die Umsetzung der bereitgestellten Mittel in den dringend  benötigten Projekten droht jedoch an strukturellen Problemen wie dem eklatanten  Fachkräftemangel, anhaltenden Kapazitätsengpässen in der Bauwirtschaft und  langwierigen Genehmigungsverfahren zu scheitern (vgl. Hauptverband der Deutschen  Bauindustrie 2025).
+Die deutsche Bau-- und Infrastrukturbranche steht vor immensen Herausforderungen, die  eine grundlegende Steigerung der Effizienz und Umsetzungsgeschwindigkeit erfordern.  Ein signifikantes Wohnungsbaudefizit, das je nach Studie auf über 550.000 fehlende  Wohnungen beziffert wird, verlangt nach einer drastischen Beschleunigung des Neubaus\autocite[]{pestel2025}. Gleichzeitig stellt die  Bundesregierung über ein neues Sondervermögen für Infrastruktur und Klimaschutz bis  2029 mehr als 100 Milliarden Euro an Mitteln jeweils für den Bahn- und Wohnungsbau  bereit\autocite[]{brinkmeier2025}. Die Umsetzung der bereitgestellten Mittel in den dringend  benötigten Projekten droht jedoch an strukturellen Problemen wie dem eklatanten  Fachkräftemangel, anhaltenden Kapazitätsengpässen in der Bauwirtschaft und  langwierigen Genehmigungsverfahren zu scheitern\autocite[]{hdb2025}.
 
-Zusätzlich steht diese Bedarfslage einer traditionell fragmentierten und sequentiell  organisierten Projektabwicklung gegenüber. Die etablierte Projektkultur, die stärker auf  vertragliche Abgrenzung als auf Zusammenarbeit ausgerichtet ist, begünstigt strukturelle  Ineffizienzen sowie Kosten-- und Terminüberschreitungen, die bei öffentlichen  Großprojekten im Durchschnitt bei über 40\% liegen (vgl. Korn \& Roll 2019). Vor dem  Hintergrund der aktuellen Herausforderungen erscheinen diese Eigenschaften  zunehmend problematisch.
+Zusätzlich steht diese Bedarfslage einer traditionell fragmentierten und sequentiell  organisierten Projektabwicklung gegenüber. Die etablierte Projektkultur, die stärker auf  vertragliche Abgrenzung als auf Zusammenarbeit ausgerichtet ist, begünstigt strukturelle  Ineffizienzen sowie Kosten-- und Terminüberschreitungen, die bei öffentlichen  Großprojekten im Durchschnitt bei über 40\% liegen\autocite[]{korn2019}. Vor dem  Hintergrund der aktuellen Herausforderungen erscheinen diese Eigenschaften  zunehmend problematisch.
 
 Ein vielversprechender Lösungsansatz, welcher sich international bereits etabliert hat,  bieten integrierte Projektabwicklungsmodelle wie das Project Alliancing oder die  Integrierte Projektabwicklung (IPA). Bei diesen Arten der Projektabwicklung liegt der  Fokus auf einem kollaborativen, gemeinschaftlichen Ansatz, bei dem die wesentlichen  Akteure frühzeitig in einem Mehrparteienvertrag gebunden werden, um Risiken und  Chancen gemeinsam zu managen und das Projekt auf den Gesamterfolg auszurichten.  Dieser Ansatz hat sich international als äußerst erfolgreich bei der Realisierung  komplexer Vorhaben bewährt (vgl. Cook et. al 2014).
 
@@ -22,7 +22,7 @@ Daraus leitet sich die folgende zentrale Forschungsfrage ab:
 \enquote{Wie lässt sich der Target Value Design-Prozess strukturiert in Einzelschritte zerlegen, nachvollziehbar darstellen und für die Anwendung in der deutschen Baupraxis übersetzen, um den strukturellen Defiziten der traditionellen Projektabwicklung entgegenzuwirken?}
 
 \subsection{Exploratives Nebenziel}
-Ergänzend zum Hauptziel soll diese Arbeit einen explorativen Ausblick auf eine weitere Forschungslücke, die mögliche Übertragbarkeit von TVD im Hochbau auf Infrastrukturprojekte (vgl. Ballard 2025), gewähren. Ziel ist es aufzuzeigen, welche spezifischen Charakteristika diese Bauprojektarten (z.\,B. Linienbaustellen) aufweisen und welche der zuvor herausgearbeiteten Bausteine des TVD hier potenziell anwendbar wären bzw. einer Anpassung bedürfen.
+Ergänzend zum Hauptziel soll diese Arbeit einen explorativen Ausblick auf eine weitere Forschungslücke, die mögliche Übertragbarkeit von TVD im Hochbau auf Infrastrukturprojekte \autocite [S.45]{ballard2025} (vgl. Ballard 2025), gewähren. Ziel ist es aufzuzeigen, welche spezifischen Charakteristika diese Bauprojektarten (z.\,B. Linienbaustellen) aufweisen und welche der zuvor herausgearbeiteten Bausteine des TVD hier potenziell anwendbar wären bzw. einer Anpassung bedürfen.
 
 \subsection{Hypothese und erwartete Erkenntnisse}
 Die zentrale Hypothese dieser Arbeit lautet, dass eine direkte Übertragung des TVD-Prozesses auf die deutsche Baupraxis aufgrund der strukturellen, rechtlichen und kulturellen Rahmenbedingungen nicht zielführend ist. Vielmehr wird angenommen, dass eine erfolgreiche Implementierung von Target Value Design über die bloße Einführung einer Methode hinausgeht und spezifische Anpassungen erfordert, um den Gegebenheiten in Deutschland gerecht zu werden.
