--- a/08_bibliography/literatur.bib
+++ b/08_bibliography/literatur.bib
@@ -7,3 +7,87 @@
     publisher = {Cambridge Scholar Publishing },
     year = {2025}
 }
+
+% Bibliographie-Datei für Target Value Design Masterarbeit
+
+@online{brinkmeier2025,
+    author = {Brinkmeier, B.},
+    title = {Bundeshaushalt 2025: Neuer Schub für Infrastruktur und Bau},
+    url = {https://bi-medien.de/fachzeitschriften/baumagazin/wirtschaft-politik/bundeshaushalt-2025-neuer-schub-fuer-infrastruktur-und-bau-b19967},
+    urldate = {2025-07-06},
+    year = {2025}
+}
+
+@techreport{cook2014,
+    author = {Cook, A. and others},
+    title = {Integrated Project Delivery: A Guide},
+    institution = {AIA California Council. The American Institute of Architects (AIA)},
+    year = {2014}
+}
+
+@techreport{hdb2025,
+    author = {{Hauptverband der Deutschen Bauindustrie}},
+    title = {Jahreswirtschaftsbericht 2025: Kapazitäten, Fachkräfte und Ausblick},
+    year = {2025}
+}
+
+@techreport{haghsheno2024,
+    author = {Haghsheno, S. and others},
+    title = {IPA-Report 2024},
+    institution = {IPA-Zentrum e.V.},
+    year = {2024}
+}
+
+@techreport{hertwig2022,
+    author = {Hertwig, A. and Le-Lann, J.-M.},
+    title = {Partnerschaftliche Projektabwicklung -- Einblicke in die Projektrealität},
+    institution = {German Lean Construction Institute (GLCI)},
+    year = {2022}
+}
+
+@book{hofstadler2023,
+    author = {Hofstadler, C. and Motzko, C.},
+    title = {Agile Digitalisierung im Baubetrieb: Innovative Wege zur Transformation und Best Practices},
+    publisher = {Springer Fachmedien Wiesbaden},
+    address = {Wiesbaden},
+    year = {2023}
+}
+
+@incollection{jacob2018,
+    author = {Jacob, D. and others},
+    title = {Kalkulationsbeispiele},
+    booktitle = {Kalkulieren im Ingenieurbau: Strategie - Kalkulation - Controlling},
+    editor = {Jacob, D. and Müller, C. and Oehmichen, M.},
+    publisher = {Springer Fachmedien},
+    address = {Wiesbaden},
+    year = {2018}
+}
+
+@techreport{korn2019,
+    author = {Korn, M. and Roll, O.},
+    title = {Öffentliche Bauprojekte in Deutschland -- eine Analyse der Ursachen für Kosten- und Zeitüberschreitungen},
+    institution = {Hertie School of Governance},
+    year = {2019}
+}
+
+@incollection{schoettle2023,
+    author = {Schöttle, A. and Haghsheno, S.},
+    title = {Grundlagen und Entwicklung der integrierten Projektabwicklung},
+    booktitle = {IPA in der Praxis -- Ein Leitfaden für die Initiierung und Umsetzung von Projekten mit Integrierter Projektabwicklung},
+    publisher = {Springer Vieweg},
+    year = {2023}
+}
+
+@article{tommelein2016,
+    author = {Tommelein, I. and Ballard, G.},
+    title = {TARGET VALUE DESIGN Introduction, Framework, and Current Benchmark},
+    journal = {Lean Construction Journal},
+    year = {2016}
+}
+
+@misc{pestel2025,
+    author = {{Pestel-Institut} and {Bauforschungsinstitut ARGE}},
+    title = {Wohnungsbau-Studie 2025: Analyse des aktuellen und zukünftigen Bedarfs in Deutschland},
+    howpublished = {Studie},
+    year = {2025}
+}
