Updates from Overleaf

--- a/00_config/packages.tex
+++ b/00_config/packages.tex
@@ -30,7 +30,7 @@
 \usepackage{xcolor}                % Farbdefinitionen
 
 % ===== LITERATURVERZEICHNIS =====
-\usepackage[backend=biber,style=authortitle,autocite=footnote]{biblatex}
+\usepackage[backend=biber,style=verbose-trad1,autocite=footnote]{biblatex}
 \addbibresource{08_bibliography/literatur.bib}
 
 % ===== VERWEISE UND LINKS =====
