--- a/00_config/settings.tex
+++ b/00_config/settings.tex
@@ -15,7 +15,11 @@
 \crefname{section}{Abschnitt}{Abschnitte}
 \crefname{subsection}{Unterabschnitt}{Unterabschnitte}
 
-
+% Deutsche Übersetzungen für Zitate
+\DefineBibliographyStrings{ngerman}{ 
+   andothers = {et\addabbrvspace al\adddot},
+   andmore   = {et\addabbrvspace al\adddot},
+}
 
 % ===== FARBEN DEFINIEREN =====
 \definecolor{tu-green}{RGB}{99,154,58}      % TU Dortmund Grün
