--- a/02_mainmatter/ch1_Einleitung.tex
+++ b/02_mainmatter/ch1_Einleitung.tex
@@ -7,9 +7,9 @@ Die deutsche Bau-- und Infrastrukturbranche steht vor immensen Herausforderungen
 
 Zusätzlich steht diese Bedarfslage einer traditionell fragmentierten und sequentiell  organisierten Projektabwicklung gegenüber. Die etablierte Projektkultur, die stärker auf  vertragliche Abgrenzung als auf Zusammenarbeit ausgerichtet ist, begünstigt strukturelle  Ineffizienzen sowie Kosten-- und Terminüberschreitungen, die bei öffentlichen  Großprojekten im Durchschnitt bei über 40\% liegen\autocite[]{korn2019}. Vor dem  Hintergrund der aktuellen Herausforderungen erscheinen diese Eigenschaften  zunehmend problematisch.
 
-Ein vielversprechender Lösungsansatz, welcher sich international bereits etabliert hat,  bieten integrierte Projektabwicklungsmodelle wie das Project Alliancing oder die  Integrierte Projektabwicklung (IPA). Bei diesen Arten der Projektabwicklung liegt der  Fokus auf einem kollaborativen, gemeinschaftlichen Ansatz, bei dem die wesentlichen  Akteure frühzeitig in einem Mehrparteienvertrag gebunden werden, um Risiken und  Chancen gemeinsam zu managen und das Projekt auf den Gesamterfolg auszurichten.  Dieser Ansatz hat sich international als äußerst erfolgreich bei der Realisierung  komplexer Vorhaben bewährt (vgl. Cook et. al 2014).
+Ein vielversprechender Lösungsansatz, welcher sich international bereits etabliert hat,  bieten integrierte Projektabwicklungsmodelle wie das Project Alliancing oder die  Integrierte Projektabwicklung (IPA). Bei diesen Arten der Projektabwicklung liegt der  Fokus auf einem kollaborativen, gemeinschaftlichen Ansatz, bei dem die wesentlichen  Akteure frühzeitig in einem Mehrparteienvertrag gebunden werden, um Risiken und  Chancen gemeinsam zu managen und das Projekt auf den Gesamterfolg auszurichten.  Dieser Ansatz hat sich international als äußerst erfolgreich bei der Realisierung  komplexer Vorhaben bewährt\autocite[]{cook2014}.
 
-In den letzten Jahren hat das IPA--Thema auch in Deutschland stark an Fahrt aufgenommen und findet derzeit in mehr und mehr Pilotprojekten Anwendung. Das IPA--Zentrum identifizierte in seinem Jahresbericht von 2024 insgesamt 25 abgeschlossene oder laufende IPA--Projekte und weitere, bei denen eine aktive Entscheidung für IPA bereits gefallen ist (vgl. Haghsheno et al 2024). Ein zentraler Prozessbaustein zur Kosten-- und Wertsteuerung innerhalb dieser Modelle ist das Target Value Design (TVD) (vgl. Ballard \& Morris 2025). Während zu den übergeordneten IPA--Rahmenbedingungen bereits Forschung im deutschen Kontext existiert (vgl. Haghsheno et al 2024), fehlt eine systematische, prozessorientierte  Aufbereitung für die Anwendung von TVD (siehe Kapitel 3). Hier setzt die vorliegende  Arbeit an, um diese Lücke zu schließen und aufzuzeigen, wie TVD als Methode zur Bewältigung der anstehenden Bauaufgaben beitragen kann.
+In den letzten Jahren hat das IPA--Thema auch in Deutschland stark an Fahrt aufgenommen und findet derzeit in mehr und mehr Pilotprojekten Anwendung. Das IPA--Zentrum identifizierte in seinem Jahresbericht von 2024 insgesamt 25 abgeschlossene oder laufende IPA--Projekte und weitere, bei denen eine aktive Entscheidung für IPA bereits gefallen ist (vgl. Haghsheno et al 2024). Ein zentraler Prozessbaustein zur Kosten-- und Wertsteuerung innerhalb dieser Modelle ist das Target Value Design (TVD)\autocite[]{Testkey}. Während zu den übergeordneten IPA--Rahmenbedingungen bereits Forschung im deutschen Kontext existiert\autocite[]{haghsheno2024}, fehlt eine systematische, prozessorientierte  Aufbereitung für die Anwendung von TVD (siehe Kapitel 3). Hier setzt die vorliegende  Arbeit an, um diese Lücke zu schließen und aufzuzeigen, wie TVD als Methode zur Bewältigung der anstehenden Bauaufgaben beitragen kann.
 
 \section{Zielsetzung und Forschungsfrage}
 \label{sec:zielsetzung}
