--- a/08_bibliography/literatur.bib
+++ b/08_bibliography/literatur.bib
@@ -8,8 +8,6 @@
     year = {2025}
 }
 
-% Bibliographie-Datei für Target Value Design Masterarbeit
-
 @online{brinkmeier2025,
     author = {Brinkmeier, B.},
     title = {Bundeshaushalt 2025: Neuer Schub für Infrastruktur und Bau},
@@ -90,4 +88,12 @@
     title = {Wohnungsbau-Studie 2025: Analyse des aktuellen und zukünftigen Bedarfs in Deutschland},
     howpublished = {Studie},
     year = {2025}
+}
+@book{Testkey,
+    title = {Target {Value} {Delivery} in {Building} {Projects}},
+    isbn = {1-0364-0575-3},
+    publisher = {Cambridge Scholars Publishing},
+    author = {Ballard, Glenn and Morris, Peter},
+    year = {2025},
+    keywords = {yet to read},
 }
