Updates from Overleaf

--- a/00_config/packages.tex
+++ b/00_config/packages.tex
@@ -43,6 +43,7 @@
     sorting=nyt
 ]{biblatex}
 \addbibresource{08_bibliography/literatur.bib}
+\addbibresource{08_bibliography/references.bib}
 
 % ===== VERWEISE UND LINKS =====
 \usepackage[hidelinks]{hyperref}   % Anklickbare Links (unsichtbar gedruckt)
