--- a/00_config/settings.tex
+++ b/00_config/settings.tex
@@ -1,6 +1,9 @@
 % ===== ZEILENABSTAND =====
 \onehalfspacing                    % 1,5-facher Zeilenabstand (Standard für Masterarbeiten)
 
+% ===== KAPITEL-ABSTÄNDE ANPASSEN =====
+\renewcommand*{\chapterheadstartvskip}{\vspace*{-\topskip}}
+
 % ===== KOPF- UND FUSSZEILEN =====
 \pagestyle{scrheadings}
 \clearpairofpagestyles
