--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -1,14 +1,32 @@
 \chapter{Grundlagen}
 \label{ch:grundlagen}
-Ziel: 
+Ziel: Dieses Kapitel legt die Wissensbasis
 
 \section{Konventionelle Projektabwicklung in der deutschen Baupraxis}
 \label{sec: 2.1}
 Ziel:
 
+\clearpage
+
 \section{Integrierte Projektabwicklungsmodelle als alternativer Ansatz}
 \label{sec: 2.2}
-Ziel:
+
+\subsection{Der Lean-Ansatz als Fundament integrierter Projektabwicklung}
+\label{sec:2.2.1}
+
+Ursprung des Ansatzes (Lean Management) Skizzieren
+- Toyota-Produktionssystem\autocite[]{ohno_toyota-produktionssystem_2013} als Ursprung
+- Kernideen und Prinzipien : Wertmaximierung, Verschwendungsreduktion, People First (checken), Kaizen
+Transfer auf die Baubranche durch Lean Construction
+Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
+
+\subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung (IPA)}
+\label{sec:2.2.2}
+
+\subsection{Internationale Erfolge und Status Quo in Deutschland}
+\label{sec:2.2.3}
+
+\clearpage
 
 \section{Target Value Design (TVD) als Kernmethode}
 \label{sec: 2.3}
