--- a/02_mainmatter/ch6_Infrastruktur.tex
+++ b/02_mainmatter/ch6_Infrastruktur.tex
@@ -1,4 +1,4 @@
-\chapter{Infratrukturbau - ein explorativer Ausblick}
+\chapter{Infrastrukturbau - ein explorativer Ausblick}
 \label{ch:infrastrukturbau}
 
 \section{Abschnitt}
