--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 % === VORSPANN (römische Seitenzahlen) ===
 \frontmatter
 \tableofcontents
+\input{01_frontmatter/acronyms}
 \listoffigures
 \listoftables
 
