--- a/02_mainmatter/ch1_Einleitung.tex
+++ b/02_mainmatter/ch1_Einleitung.tex
@@ -1,7 +1,7 @@
-\chapter{Einleitung}
+\chapter{Einleitung (Exposé)}
 \label{ch:einleitung}
 
-\section{Problemstellung und Relevanz}
+\section*{Problemstellung und Relevanz}
 \label{sec:problemstellung}
 Die deutsche Bau-- und Infrastrukturbranche steht vor immensen Herausforderungen, die  eine grundlegende Steigerung der Effizienz und Umsetzungsgeschwindigkeit erfordern.  Ein signifikantes Wohnungsbaudefizit, das je nach Studie auf über 550.000 fehlende  Wohnungen beziffert wird, verlangt nach einer drastischen Beschleunigung des Neubaus\autocite[]{pestel2025}. Gleichzeitig stellt die  Bundesregierung über ein neues Sondervermögen für Infrastruktur und Klimaschutz bis  2029 mehr als 100 Milliarden Euro an Mitteln jeweils für den Bahn- und Wohnungsbau  bereit\autocite[]{brinkmeier2025}. Die Umsetzung der bereitgestellten Mittel in den dringend  benötigten Projekten droht jedoch an strukturellen Problemen wie dem eklatanten  Fachkräftemangel, anhaltenden Kapazitätsengpässen in der Bauwirtschaft und  langwierigen Genehmigungsverfahren zu scheitern\autocite[]{hdb2025}.
 
@@ -11,24 +11,24 @@ Ein vielversprechender Lösungsansatz, welcher sich international bereits etabli
 
 In den letzten Jahren hat das IPA--Thema auch in Deutschland stark an Fahrt aufgenommen und findet derzeit in mehr und mehr Pilotprojekten Anwendung. Das IPA--Zentrum identifizierte in seinem Jahresbericht von 2024 insgesamt 25 abgeschlossene oder laufende IPA--Projekte und weitere, bei denen eine aktive Entscheidung für IPA bereits gefallen ist (vgl. Haghsheno et al 2024). Ein zentraler Prozessbaustein zur Kosten-- und Wertsteuerung innerhalb dieser Modelle ist das Target Value Design (TVD)\autocite[]{Testkey}. Während zu den übergeordneten IPA--Rahmenbedingungen bereits Forschung im deutschen Kontext existiert\autocite[]{haghsheno2024}, fehlt eine systematische, prozessorientierte  Aufbereitung für die Anwendung von TVD (siehe Kapitel 3). Hier setzt die vorliegende  Arbeit an, um diese Lücke zu schließen und aufzuzeigen, wie TVD als Methode zur Bewältigung der anstehenden Bauaufgaben beitragen kann.
 
-\section{Zielsetzung und Forschungsfrage}
+\section*{Zielsetzung und Forschungsfrage}
 \label{sec:zielsetzung}
 
-\subsection{Hauptziel und zentrale Forschungsfrage}
+\subsection*{Hauptziel und zentrale Forschungsfrage}
 Das Hauptziel dieser Arbeit besteht in der systematischen Analyse und Aufbereitung des Target Value Design (TVD) als zentraler Bestandteil moderner, integrierter Projektabwicklungsmodelle im Bauwesen wie der Integrierten Projektabwicklung (IPA). Dabei sollen, anhand einer systematischen Literaturrecherche, wesentliche Prozessbausteine des TVD identifiziert und beschrieben werden, um sie anschließend zu einem idealtypischen Gesamtprozess zusammenzusetzen. Die tiefgehende Aufbereitung und Darstellung sollen im Anschluss eine optimale Gegenüberstellung mit den Abläufen der konventionellen Projektabwicklung in Deutschland ermöglichen. Dieser Vergleich konzentriert sich insbesondere auf die Rahmenbedingungen in der deutschen Baupraxis, die von den einschlägigen Regelwerken wie HOAI und AHO geschaffen werden, und dient vor allem der Identifizierung von Anpassungsbedarfen. Letztere sollen schlussendlich in der Ableitung eines Transferleitfadens münden, der die Anwendung von TVD im Kontext der Bauprojektabwicklung in Deutschland verbessert.
 
 Daraus leitet sich die folgende zentrale Forschungsfrage ab:
 
 \enquote{Wie lässt sich der Target Value Design-Prozess strukturiert in Einzelschritte zerlegen, nachvollziehbar darstellen und für die Anwendung in der deutschen Baupraxis übersetzen, um den strukturellen Defiziten der traditionellen Projektabwicklung entgegenzuwirken?}
 
-\subsection{Exploratives Nebenziel}
-Ergänzend zum Hauptziel soll diese Arbeit einen explorativen Ausblick auf eine weitere Forschungslücke, die mögliche Übertragbarkeit von TVD im Hochbau auf Infrastrukturprojekte \autocite [S.45]{ballard2025} (vgl. Ballard 2025), gewähren. Ziel ist es aufzuzeigen, welche spezifischen Charakteristika diese Bauprojektarten (z.\,B. Linienbaustellen) aufweisen und welche der zuvor herausgearbeiteten Bausteine des TVD hier potenziell anwendbar wären bzw. einer Anpassung bedürfen.
+\subsection*{Exploratives Nebenziel}
+Ergänzend zum Hauptziel soll diese Arbeit einen explorativen Ausblick auf eine weitere Forschungslücke, die mögliche Übertragbarkeit von TVD im Hochbau auf Infrastrukturprojekte \autocite [S.45]{ballard2025}, gewähren. Ziel ist es aufzuzeigen, welche spezifischen Charakteristika diese Bauprojektarten (z.\,B. Linienbaustellen) aufweisen und welche der zuvor herausgearbeiteten Bausteine des TVD hier potenziell anwendbar wären bzw. einer Anpassung bedürfen.
 
-\subsection{Hypothese und erwartete Erkenntnisse}
+\subsection*{Hypothese und erwartete Erkenntnisse}
 Die zentrale Hypothese dieser Arbeit lautet, dass eine direkte Übertragung des TVD-Prozesses auf die deutsche Baupraxis aufgrund der strukturellen, rechtlichen und kulturellen Rahmenbedingungen nicht zielführend ist. Vielmehr wird angenommen, dass eine erfolgreiche Implementierung von Target Value Design über die bloße Einführung einer Methode hinausgeht und spezifische Anpassungen erfordert, um den Gegebenheiten in Deutschland gerecht zu werden.
 Als Ergebnis dieser Arbeit soll ein Transferleitfaden für die Anwendung von Target Value Design in Deutschland entstehen. Dieser Leitfaden soll sowohl den aufbereiteten Prozess darstellen als auch Inkompatibilitäten aufzeigen und konkrete Handlungsempfehlungen für letztere bieten, um eine effiziente Projektabwicklung mit Target Value Design zu ermöglichen.
 
-\section{Methodischer Ansatz}
+\section*{Methodischer Ansatz}
 \label{sec:methodischer-ansatz}
 
 Die Arbeit verfolgt einen literaturbasierten, konzeptionell-analytischen Forschungsansatz, der sich in drei aufeinander aufbauende Schritte gliedert:
@@ -43,5 +43,5 @@ Die Arbeit verfolgt einen literaturbasierten, konzeptionell-analytischen Forschu
 
 Für das explorative Nebenziel der Übertragbarkeit von TVD auf Infrastrukturprojekte werden die aus dem Hochbau gewonnenen Erkenntnisse auf die spezifischen Charakteristika dieser Projektart angewandt, um erste Hypothesen für notwendige Adaptionen aufzuzeigen.
 
-\section{Aufbau der Arbeit}
+\section*{Aufbau der Arbeit}
 \label{sec:aufbau}
