Updates from Overleaf

--- a/02_mainmatter/ch1_Einleitung.tex
+++ b/02_mainmatter/ch1_Einleitung.tex
@@ -3,8 +3,15 @@
 
 \section*{Problemstellung und Relevanz}
 \label{sec:problemstellung}
-Die deutsche Bau-- und Infrastrukturbranche steht vor immensen Herausforderungen, die  eine grundlegende Steigerung der Effizienz und Umsetzungsgeschwindigkeit erfordern.  Ein signifikantes Wohnungsbaudefizit, das je nach Studie auf über 550.000 fehlende  Wohnungen beziffert wird, verlangt nach einer drastischen Beschleunigung des Neubaus\autocite[]{pestel2025}. Gleichzeitig stellt die  Bundesregierung über ein neues Sondervermögen für Infrastruktur und Klimaschutz bis  2029 mehr als 100 Milliarden Euro an Mitteln jeweils für den Bahn- und Wohnungsbau  bereit\autocite[]{brinkmeier2025}. Die Umsetzung der bereitgestellten Mittel in den dringend  benötigten Projekten droht jedoch an strukturellen Problemen wie dem eklatanten  Fachkräftemangel, anhaltenden Kapazitätsengpässen in der Bauwirtschaft und  langwierigen Genehmigungsverfahren zu scheitern\autocite[]{hdb2025}.
+Die deutsche Bau-- und Infrastrukturbranche steht vor immensen Herausforderungen, die  eine grundlegende Steigerung der Effizienz und Umsetzungsgeschwindigkeit erfordern.  Ein signifikantes Wohnungsbaudefizit, das je nach Studie auf über 550.000 fehlende  Wohnungen beziffert wird, verlangt nach einer drastischen Beschleunigung des Neubaus\autocite[]{}. Gleichzeitig stellt die  Bundesregierung über ein neues Sondervermögen für Infrastruktur und Klimaschutz bis  2029 mehr als 100 Milliarden Euro an Mitteln jeweils für den Bahn- und Wohnungsbau  bereit\autocite[]{brinkmeier2025}. Die Umsetzung der bereitgestellten Mittel in den dringend  benötigten Projekten droht jedoch an strukturellen Problemen wie dem eklatanten  Fachkräftemangel, anhaltenden Kapazitätsengpässen in der Bauwirtschaft und  langwierigen Genehmigungsverfahren zu scheitern\autocite[]{hdb2025}.
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=0.9\textwidth]{kostensteigerung-grossprojekte-deutschland}
+    \caption{Kostensteigerungen bei deutschen Großprojekten \cite{statista2024grossprojekte}}
+    \label{fig:kostensteigerung-grossprojekte}
+\end{figure}
+\clearpage
 Zusätzlich steht diese Bedarfslage einer traditionell fragmentierten und sequentiell  organisierten Projektabwicklung gegenüber. Die etablierte Projektkultur, die stärker auf  vertragliche Abgrenzung als auf Zusammenarbeit ausgerichtet ist, begünstigt strukturelle  Ineffizienzen sowie Kosten-- und Terminüberschreitungen, die bei öffentlichen  Großprojekten im Durchschnitt bei über 40\% liegen\autocite[]{korn2019}. Vor dem  Hintergrund der aktuellen Herausforderungen erscheinen diese Eigenschaften  zunehmend problematisch.
 
 Ein vielversprechender Lösungsansatz, welcher sich international bereits etabliert hat,  bieten integrierte Projektabwicklungsmodelle wie das Project Alliancing oder die  Integrierte Projektabwicklung (IPA). Bei diesen Arten der Projektabwicklung liegt der  Fokus auf einem kollaborativen, gemeinschaftlichen Ansatz, bei dem die wesentlichen  Akteure frühzeitig in einem Mehrparteienvertrag gebunden werden, um Risiken und  Chancen gemeinsam zu managen und das Projekt auf den Gesamterfolg auszurichten.  Dieser Ansatz hat sich international als äußerst erfolgreich bei der Realisierung  komplexer Vorhaben bewährt\autocite[]{cook2014}.
