--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -14,10 +14,19 @@ Ziel:
 \subsection{Der Lean-Ansatz als Fundament integrierter Projektabwicklung}
 \label{sec:2.2.1}
 
+\textit{Einleitung - Hinführung zur Notwendigkeit neuer Ansätze nach der Kritik an der konventionellen Projektabwicklung (aus Abschnitt 2.1). Die Philosophie des Lean Managements bietet hierfür das Fundament.}
+
+Die im vorangegangenen Abschnitt aufgezeigten Schwachstellen konventioneller, sequenzieller Projektabwicklung sind keineswegs ein neues Phänomen oder eine reine Eigenheit der Bauwirtschaft. Vergleichbare Herausforderungen zeigten sich bereits nach dem Zweiten Weltkrieg in der japanischen Automobilindustrie. Die dort vorherrschenden Produktionsmethoden waren von Ineffizienz und Verschwendung geprägt, was angesichts knapper Ressourcen nicht tragbar war. Als Reaktion darauf entwickelte der Ingenieur Taiichi Ohno bei Toyota einen grundlegend neuen Managementansatz, der heute als das Toyota-Produktionssystem bekannt ist und das Fundament der Lean-Philosophie bildet.
+
 Ursprung des Ansatzes (Lean Management) Skizzieren
 - Toyota-Produktionssystem\autocite[]{ohno_toyota-produktionssystem_2013} als Ursprung
 - Kernideen und Prinzipien : Wertmaximierung, Verschwendungsreduktion, People First (checken), Kaizen
+
 Transfer auf die Baubranche durch Lean Construction
+- Landesweite Aufmerksamkeit in Japan nach der Ölkrise 1973
+- Während sich die 
+- Internationale Aufmerksamkeit durch 
+
 Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
 
 \subsection{Prinzipien und Merkmale der Integrierten Projektabwicklung (IPA)}
@@ -28,6 +37,6 @@ Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
 
 \clearpage
 
-\section{Target Value Design (TVD) als Kernmethode}
+\section{Target Value Design (2TVD) als Kernmethode}
 \label{sec: 2.3}
 Ziel:
