--- a/08_bibliography/literatur.bib
+++ b/08_bibliography/literatur.bib
@@ -1,6 +1,18 @@
 % Bibliographie-Datei für Target Value Design Masterarbeit
 % Hier kommen später die Literaturquellen rein
 
+======================================================================================
+
+@online{statista2024grossprojekte,
+    title={Großprojekte außer Kontrolle -- Kostensteigerung bei Großprojekten in Deutschland},
+    author={{Statista}},
+    year={2024},
+    url={https://de.statista.com/infografik/3486/die-groessten-kostensteigerungen-bei-grossprojekten/},
+    urldate={2025-08-20},
+    note={Datengrundlage: Hertie School of Governance}
+}
+
+======================================================================================
 @book{ballard2025,
     author = {Ballard, Glenn},
     title = {Target Value Delivery in Building Projects},
