--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,10 @@
 % === TITELSEITE ===
 \input{01_frontmatter/titlepage}
 
+% === Abstract DE & EN ===
+\input{01_frontmatter/kurzfassung}
+\input{01_frontmatter/abstract}
+
 % === VORSPANN (römische Seitenzahlen) ===
 \frontmatter
 \tableofcontents
