Updates from Overleaf

--- a/00_config/metadata.tex
+++ b/00_config/metadata.tex
@@ -1,8 +1,10 @@
-% ===== GRUNDDATEN DER ARBEIT =====
-\title{Target Value Design im Bauwesen -- Strukturierte Analyse und prozessorientierte 
-Darstellung im Kontext der deutschen Baupraxis}
+% Einmal als Variable definieren
+\newcommand{\arbeitstitel}{Target Value Design im Bauwesen -- Strukturierte Analyse und prozessorientierte Darstellung im Kontext der deutschen Baupraxis}
+\newcommand{\authorname}{Lasse Krisztian}
 
-\author{Lasse Krisztian}
+% Standard LaTeX-Befehle daraus ableiten
+\title{\arbeitstitel}
+\author{\authorname}
 \date{\today}
 
 % ===== PERSÖNLICHE DATEN =====
@@ -22,8 +24,8 @@ Darstellung im Kontext der deutschen Baupraxis}
 \newcommand{\zweitbetreuer}{Dipl.-Ing. Tim Brandt}
 
 % ===== TERMINE =====
-\newcommand{\abgabedatum}{30. November 2025}
-\newcommand{\bearbeitungszeitraum}{Juli 2025 -- November 2025}
+\newcommand{\abgabedatum}{15. Dezember 2025}
+\newcommand{\bearbeitungszeitraum}{Juli 2025 -- Dezember 2025}
 
 % ===== THEMA UND SCHWERPUNKTE =====
 \newcommand{\themabereich}{Target Value Design}
