Updates from Overleaf

--- a/00_config/metadata.tex
+++ b/00_config/metadata.tex
@@ -1,10 +1,5 @@
-% Einmal als Variable definieren
-\newcommand{\arbeitstitel}{Target Value Design im Bauwesen -- Strukturierte Analyse und prozessorientierte Darstellung im Kontext der deutschen Baupraxis}
-\newcommand{\authorname}{Lasse Krisztian}
-
-% Standard LaTeX-Befehle daraus ableiten
-\title{\arbeitstitel}
-\author{\authorname}
+\title{Target Value Design im Bauwesen -- Strukturierte Analyse und prozessorientierte Darstellung im Kontext der deutschen Baupraxis}
+\author{Lasse Krisztian}
 \date{\today}
 
 % ===== PERSÖNLICHE DATEN =====
