Updates from Overleaf

--- a/01_frontmatter/00_titlepage.tex
+++ b/01_frontmatter/00_titlepage.tex
@@ -13,7 +13,7 @@
     
     % === TITEL DER ARBEIT ===
     \makeatletter % <--- HIER EINFÜGEN
-    {\huge \textbf{\@title}}\\[1.5cm]
+    \parbox{0.8\textwidth}{\centering\Large\bfseries\@title}\\[1.5cm]
     
     % === ART DER ARBEIT ===
     {\Large Masterarbeit}\\[0.3cm]
