Updates from Overleaf

--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -1,6 +1,6 @@
 \chapter{Grundlagen}
 \label{ch:grundlagen}
-Ziel: Dieses Kapitel legt die Wissensbasis
+% Ziel: Ziel: Der Leser soll die Struktur, die Rollenverteilung und die prozessualen Schwachstellen der traditionellen Projektabwicklung verstehen. Dieses Kapitel etabliert das "Problem", für das Ihre Arbeit eine Lösung präsentiert.
 
 \section{Konventionelle Projektabwicklung in der deutschen Baupraxis}
 \label{sec: 2.1}
@@ -11,8 +11,12 @@ Ziel:
 \section{Integrierte Projektabwicklungsmodelle als alternativer Ansatz}
 \label{sec: 2.2}
 
+% Ziel: Der Leser soll eine Einführung in die Entstehung und Entwicklung integrierter Projekabwicklung bekommen.
+
 \subsection{Der Lean-Ansatz als Fundament integrierter Projektabwicklung}
 \label{sec:2.2.1}
+
+% Ziel: Vermittlung der Lean-Pilosophie als Ursprungsgedanke und der Weiterentwicklung über Lean Construction zu kollaborativen Projekabwicklungsmodellen
 
 \textit{Einleitung - Hinführung zur Notwendigkeit neuer Ansätze nach der Kritik an der konventionellen Projektabwicklung (aus Abschnitt 2.1). Die Philosophie des Lean Managements bietet hierfür das Fundament.}
 
@@ -39,4 +43,8 @@ Ursprung und Entwicklung von Projetct Alliancing, IPD und IPA bis heute
 
 \section{Target Value Design (2TVD) als Kernmethode}
 \label{sec: 2.3}
-Ziel:
+
+%Ziel:
+
+\subsection{TVD - Prozess oder Methode}
+\label{sec: 2.3.1}
