--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -1,5 +1,44 @@
 \chapter{Methodik}
 \label{ch:methodik}
 
-\section{Abschnitt}
-\label{sec: 3}
+% Ziel: Das Vorgehen der Arbeit transparent und wissenschaftlich nachvollziehbar darlegen.
+% Es wird der "Plan" für die Forschung beschrieben.
+
+\section{Forschungsdesign und methodische Verortung}
+\label{sec: 3.1}
+
+%   - Ziel: Wahl der Methodik begründen und wissenschaftlich einordnen.
+%   - Inhalt:
+%     - Wiederholung der Forschungsfrage.
+%     - Begründung für literaturbasierten, konzeptionell-analytischen Ansatz.
+%     - Abgrenzung zu anderen Methoden (z.B. empirisch).
+%     - Optional: Visualisierung des Vorgehens als einfaches Flussdiagramm.
+
+\section{Systematische Literaturrecherche und -analyse}
+\label{sec: 3.2}
+
+%   - Ziel: Das Vorgehen bei der Literatursuche und -auswahl exakt dokumentieren.
+%   - Inhalt:
+%     - Recherchestrategie: Genutzte Datenbanken (Scopus, etc.), Fachinstitutionen (GLCI, etc.).
+%     - Suchbegriffe: Beispiele für Keyword-Kombinationen (DE/EN).
+%     - Auswahlkriterien: Inklusions-/Exklusionskriterien (Relevanz, Aktualität, Qualität).
+%     - Analysemethode: Qualitative Inhaltsanalyse zur Identifikation von Prozessbausteinen, Rollen, Werkzeugen.
+
+\section{Prozessbeschreibung und Modellierung}
+\label{sec: 3.3}
+
+%   - Ziel: Erklären, wie aus den Literatur-Fragmenten das idealtypische TVD-Modell konstruiert wird.
+%   - Inhalt:
+%     - Synthese: Zusammenführung der identifizierten Bausteine aus diversen Quellen.
+%     - Modellierungsansatz: Begründung für die Wahl eines Prozessmodells (z.B. Flussdiagramm, Swimlane).
+%     - Validierung: Logische Prüfung des Modells auf Konsistenz und Vollständigkeit basierend auf der Literatur.
+
+\section{Kontextanalyse und Ableitung des Transferleitfadens}
+\label{sec: 3.4}
+
+%   - Ziel: Den analytischen Vergleich und die Ableitung der Handlungsempfehlungen beschreiben.
+%   - Inhalt:
+%     - Gegenüberstellung: Systematischer Vergleich des TVD-Modells mit der deutschen Baupraxis (Basis: Kapitel 2.1).
+%     - Analysefokus: Strukturelle, rechtliche (HOAI/VOB) und kulturelle Gegebenheiten.
+%     - Identifikation: Ziel ist das Aufdecken von Reibungspunkten und Anpassungsbedarfen ("Fit-Gap-Analyse").
+%     - Struktur des Leitfadens: Erläutern, wie die Ergebnisse zu konkreten Handlungsempfehlungen aufbereitet werden.
